--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="GSift | Print and Digital Albums | Your Digital Media Personal Assistant | We take over your digital folders, fix all that need fixing, and pick the best ones, print them for you in beautiful albums." />
     <!--[if IE]>
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
     <link rel="icon" href="assets/img/favicon.ico" />
-    <title>Wonder Landing Page</title>
+    <title>Save You Memrories | Your Digital Media Personal Assistant</title>
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
-    <link href="assets/css/ionicons.css" rel="stylesheet" />
     <link href="assets/css/font-awesome.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
@@ -22,14 +20,14 @@
       <div class="container" >
         <div class="row"  >
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 logo-wrapper">
-            <img src="assets/img/logo.png" alt="" />
+            GSift | Your Digital Media Personal Assistant
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right" >
             <div class="menu-links scroll-me">
-              <a href="#header"> <i class="ion-ios-home-outline"></i> </a>
-              <a href="#about"> <i class="ion-ios-camera-outline"></i> </a>
-              <a href="#clients"> <i class="ion-ios-grid-view-outline"></i> </a>
-              <a href="#contact"> <i class="ion-ios-chatboxes-outline"></i> </a>
+              <a href="#header"> <i class="fa fa-home"></i> </a>
+              <a href="#about"> <i class="fa fa-question-circle"></i> </a>
+              <a href="#email-subscribe"> <i class="fa fa-envelope"></i> </a>
+              <a href="#clients"> <i class="fa fa-comments-o"></i> </a>
             </div>
           </div>
         </div>
@@ -43,22 +41,16 @@
         <div class="container">
           <div class="row scroll-me" >
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <h1 >Wonder Landing Page</h1>
+              <h1>Save your Memories</h1>
               <h4>
-                Consectetur adipiscing elit felis dolor felis dolor vitae.
-                Eelit felis dolor vitae  adipiscing elit felis dolor felis dolor vitae.
-                Eelit felis dolor vitae
-
+                We go through your thousands of pictures and pick the best ones for you
               </h4>
-              <a href="#about" class="btn btn-custom btn-two" >Explore Template</a>
-              <a href="#email-subscribe" class="btn btn-custom btn-one" >Subscribe Right Now </a>
+              <a href="#about" class="btn btn-custom btn-two">How it works</a>
+              <a href="#email-subscribe" class="btn btn-custom btn-one">Request an Invite</a>
             </div>
           </div>
-
-
         </div>
       </div>
-
     </div>
     <!--HOME SECTION END  -->
 
@@ -67,35 +59,33 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <h2 class="head-line">What Worth Here & Why  ?</h2>
+            <h2 class="head-line">How It Works</h2>
             <p>
-              Morbi mollis lectus et ipsum sollicitudin varius.
-              Aliquam tempus ante placerat, consectetur tellus nec, porttitor nulla.
-              Maecenas a quam erat. Praesent vehicula ut magna sit amet ultrices.
+              Got an endless stream of pictures of blurry, duplicates, flipped, red-eyes, and content that needs to be cropped?
             </p>
             <div class="row text-center">
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="row pad-bottom">
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="icon-wrapper">
-                      <i class="ion-tshirt-outline"></i>
+                      <i class="fa fa-filter"></i>
                     </div>
-                    <h4>Responsive Design </h4>
-                    Consectetur adipiscing elit felis dolor .
+                    <h4>We fix and filter</h4>
+                    You just take pictures, lots of them, and we pick the best ones, fix what needs fixing.
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="icon-wrapper">
-                      <i class="ion-monitor"></i>
+                      <i class="fa fa-picture-o"></i>
                     </div>
-                    <h4>Awesome Features  </h4>
-                    Consectetur adipiscing elit felis dolor .
+                    <h4>Monthly Albums</h4>
+                    Don't worry about ordering albums, uploading pictures for that, we just send you an album every month (or 3 months if you choose)
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="icon-wrapper">
-                      <i class="ion-clipboard"></i>
+                      <i class="fa fa-check-square-o"></i>
                     </div>
-                    <h4>Multipurpose Use</h4>
-                    Consectetur adipiscing elit felis dolor .
+                    <h4>You have options</h4>
+                    We offer the green option of digitial albums, you can only just receive the printed pictures themselves (no albums)
                   </div>
                 </div>
 
@@ -106,12 +96,36 @@
           </div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center" >
-            <img src="assets/img/phone.png" class="img-side" alt="" />
+            <img src="assets/img/az.jpg" class="img-side" alt="" />
           </div>
         </div>
       </div>
     </section>
     <!-- ABOUT SECTION END-->
+
+    <!-- SUBSCRIBE SECTION START-->
+    <section id="email-subscribe">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+            <form action="https://codective.us5.list-manage.com/subscribe/post?u=ac86eba2ff613a386cca6f921&amp;id=ae46ac84ae" method="post" id="postcontent">
+              <input type="email" name="email" class="form-control" placeholder="Enter Your E-mail Address..." required />
+              <button type="submit" class="btn btn-subscribe">Request an Invite</button>
+            </form>
+          </div>
+          <div class="col-sm-6 col-sm-offset-3" >
+            <div class="space"></div>
+            <div class="social lead">
+              <a href="http://facebook.com/gsift"><i class="fa fa-facebook "></i></a>
+              <a href="https://twitter.com/gsift"><i class="fa fa-twitter"></i></a>
+              <a href="https://google.com/+Gsift"><i class="fa fa-google-plus "></i></a>
+              <a href="#" class="hidden"><i class="fa fa-linkedin "></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- SUBSCRIBE SECTION END-->
 
     <!-- CLIENTS SECTION START-->
     <section id="clients">
@@ -127,37 +141,31 @@
                 <div class="carousel-inner">
                   <div class="item active">
                     <div class="testimonial-section">
-                      Pellentesque posuere malesuada venenatis.
-                      Donec laoreet dapibus nulla,
-                      vitae feugiat metus aliquet sed.
+                      Great value product and service, before GSift, beautiful pictures were just lost in the digital stream
                     </div>
                     <div class="testimonial-section-name">
-                      <img src="assets/img/client1.jpg" alt="" class="img-circle" />
-                      -  Justine Goliyad
+                      <img src="assets/img/sarah.jpg" alt="" class="img-circle" />
+                      -  Sarah Poloski
                     </div>
 
                   </div>
                   <div class="item">
                     <div class="testimonial-section">
-                      Pellentesque posuere malesuada venenatis.
-                      Donec laoreet dapibus nulla,
-                      vitae feugiat metus aliquet sed.
+                      You never have the time for picking the good pictures, even if you tell yourself so, this is a genius service
                     </div>
                     <div class="testimonial-section-name">
-                      <img src="assets/img/client2.jpg" alt="" class="img-circle" />
-                      -  Justine Goliyad
+                      <img src="assets/img/linda.jpg" alt="" class="img-circle" />
+                      -  Linda
                     </div>
 
                   </div>
                   <div class="item">
                     <div class="testimonial-section">
-                      Pellentesque posuere malesuada venenatis.
-                      Donec laoreet dapibus nulla,
-                      vitae feugiat metus aliquet sed.
+                      GSift trasnformed my boring digital stream of endless photos into beautiful monthly albums, love it.
                     </div>
                     <div class="testimonial-section-name">
-                      <img src="assets/img/client3.jpg" alt="" class="img-circle" />
-                      -  Justine Goliyad
+                      <img src="assets/img/tiffany.jpg" alt="" class="img-circle" />
+                      - Tiffany
                     </div>
 
                   </div>
@@ -167,7 +175,6 @@
                     <li data-target="#carousel-example" data-slide-to="1"></li>
                     <li data-target="#carousel-example" data-slide-to="2"></li>
                   </ol>
-
                 </div>
 
               </div>
@@ -180,7 +187,7 @@
     <!-- CLIENTS SECTION END-->
 
     <!-- FEATURES SECTION START-->
-    <section id="features">
+    <section id="features" class="hidden">
       <div class="container">
 
         <div class="row text-center">
@@ -211,51 +218,12 @@
     </section>
     <!-- FEATURES SECTION END-->
 
-    <!-- SUBSCRIBE SECTION START-->
-    <section id="email-subscribe">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-            <form action="subscribe.php" method="post" id="postcontent">
-              <input type="email" name="email" class="form-control" placeholder="Enter Your E-mail Address..." required />
-              <button type="submit" class="btn btn-subscribe"  >Notify Me !</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- SUBSCRIBE SECTION END-->
-
-    <!-- CONTACT SECTION START-->
-    <section id="contact">
-      <div class="overlay">
-        <div class="container">
-          <div class="row text-center">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  contact-cover" >
-              <h2>Physical Location</h2>
-              <h3>345, New Street ,</h3>
-              <h3>United States </h3>
-              <div class="space"> </div>
-              <div class="social">
-                <a href="#"><i class="fa fa-facebook "></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus "></i></a>
-
-                <a href="#"><i class="fa fa-linkedin "></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- CONATCT SECTION END-->
-
     <!-- FOOTER SECTION START-->
     <footer>
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            &copy; 2015 YourDomain.com | by <a href="http://www.designbootstrap.com/" target="_blank"> DesignBootstrap </a>
+            &copy; 2015 GSift.com | by <a href="http://www.agilelabs.com/" target="_blank">AgileLabs</a>
           </div>
         </div>
       </div>
