--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <header id="header">
       <div class="container" >
         <div class="row"  >
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 logo-wrapper">
-            GSift | Your Digital Media Personal Assistant
+          <div class="col-xs-3 col-sm-8">
+            <span class="gsift-header">GSift</span><span class="tagline hidden-xs">Your Digital Media Personal Assistant</span>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right" >
+          <div class="col-xs-9 col-sm-4 text-right" >
             <div class="menu-links scroll-me">
               <a href="#header"> <i class="fa fa-home"></i> </a>
               <a href="#about"> <i class="fa fa-question-circle"></i> </a>
@@ -40,7 +40,7 @@
       <div class="overlay">
         <div class="container">
           <div class="row scroll-me" >
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="col-sm-7 col-xs-12">
               <h1>Save your Memories</h1>
               <h4>
                 We go through your thousands of pictures and pick the best ones for you
@@ -57,46 +57,31 @@
     <!-- ABOUT SECTION START-->
     <section id="about">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <h2 class="head-line">How It Works</h2>
-            <p>
-              Got an endless stream of pictures of blurry, duplicates, flipped, red-eyes, and content that needs to be cropped?
-            </p>
-            <div class="row text-center">
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="row pad-bottom">
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="icon-wrapper">
-                      <i class="fa fa-filter"></i>
-                    </div>
-                    <h4>We fix and filter</h4>
-                    You just take pictures, lots of them, and we pick the best ones, fix what needs fixing.
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="icon-wrapper">
-                      <i class="fa fa-picture-o"></i>
-                    </div>
-                    <h4>Monthly Albums</h4>
-                    Don't worry about ordering albums, uploading pictures for that, we just send you an album every month (or 3 months if you choose)
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="icon-wrapper">
-                      <i class="fa fa-check-square-o"></i>
-                    </div>
-                    <h4>You have options</h4>
-                    We offer the green option of digitial albums, you can only just receive the printed pictures themselves (no albums)
-                  </div>
-                </div>
-
-              </div>
-
+        <h2 class="head-line">How It Works</h2>
+        <p>
+          Got an endless stream of pictures of blurry, duplicates, flipped, red-eyes, and content that needs to be cropped?
+        </p>
+        <div class="row text-center">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="icon-wrapper">
+              <i class="fa fa-filter"></i>
             </div>
-
+            <h4>We filter and fix</h4>
+            You just take pictures, lots of them, and we pick the best ones, and fix them if they need fixing.
           </div>
-
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center" >
-            <img src="assets/img/az.jpg" class="img-side" alt="" />
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="icon-wrapper">
+              <i class="fa fa-picture-o"></i>
+            </div>
+            <h4>Monthly Albums</h4>
+            Don't worry about ordering albums or wasting time uploading pictures for one, we will do the work and send you an album every month (or 3 months, or yearly if you choose)
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="icon-wrapper">
+              <i class="fa fa-check-square-o"></i>
+            </div>
+            <h4>You have options</h4>
+            We offer the green option of digital albums or you can receive just the printed pictures without an album
           </div>
         </div>
       </div>
@@ -105,16 +90,25 @@
 
     <!-- SUBSCRIBE SECTION START-->
     <section id="email-subscribe">
+      <div class="jumbotron">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+              <form action="https://codective.us5.list-manage.com/subscribe/post?u=ac86eba2ff613a386cca6f921&amp;id=ae46ac84ae" method="post" id="postcontent">
+                <div class="input-group">
+                  <input type="email" name="email" class="form-control input-lg" placeholder="Enter Your E-mail Address..." required />
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default btn-lg">Request an Invite</button>
+                  </span>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="row text-center">
-          <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-            <form action="https://codective.us5.list-manage.com/subscribe/post?u=ac86eba2ff613a386cca6f921&amp;id=ae46ac84ae" method="post" id="postcontent">
-              <input type="email" name="email" class="form-control" placeholder="Enter Your E-mail Address..." required />
-              <button type="submit" class="btn btn-subscribe">Request an Invite</button>
-            </form>
-          </div>
           <div class="col-sm-6 col-sm-offset-3" >
-            <div class="space"></div>
             <div class="social lead">
               <a href="http://facebook.com/gsift"><i class="fa fa-facebook "></i></a>
               <a href="https://twitter.com/gsift"><i class="fa fa-twitter"></i></a>
@@ -161,7 +155,7 @@
                   </div>
                   <div class="item">
                     <div class="testimonial-section">
-                      GSift trasnformed my boring digital stream of endless photos into beautiful monthly albums, love it.
+                      GSift transformed my boring digital stream of endless photos into beautiful monthly albums, love it.
                     </div>
                     <div class="testimonial-section-name">
                       <img src="assets/img/tiffany.jpg" alt="" class="img-circle" />
