--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
               <form action="https://codective.us5.list-manage.com/subscribe/post?u=ac86eba2ff613a386cca6f921&amp;id=ae46ac84ae" method="post" id="postcontent">
                 <div class="input-group">
-                  <input type="email" name="email" class="form-control input-lg" placeholder="Enter Your E-mail Address..." required />
+                  <input type="email" name="EMAIL" class="form-control input-lg" placeholder="Enter Your E-mail Address..." required />
                   <span class="input-group-btn">
                     <button type="submit" class="btn btn-default btn-lg">Request an Invite</button>
                   </span>
